<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_search"
        android:title="@string/menu_search"
        android:icon="@android:drawable/ic_menu_search"/>
    <item android:id="@+id/action_add"
        android:title="@string/menu_add"
        android:icon="@android:drawable/ic_menu_add" />
    <item android:id="@+id/action_camera"
        android:title="@string/menu_camera"
        android:icon="@android:drawable/ic_menu_camera" />
    <item android:id="@+id/action_navi"
        android:title="@string/menu_navi"
        android:icon="@android:drawable/ic_menu_agenda" />
    <item android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences" />
</menu>