<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragNewMoto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view_adapter_moto"
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:layout_marginTop="12dp"
            android:src="@android:drawable/ic_menu_add"
            android:tint="@color/colorCasual" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_type_moto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginVertical="12dp"
                android:text="@string/add_new_moto"
                android:textSize="18dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_moto_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_moto_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/moto_name"
                    android:inputType="textEmailAddress">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_moto_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_moto_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/moto_model"
                    android:inputType="textEmailAddress">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_moto_power"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_moto_power"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/moto_power"
                    android:inputType="number">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:singleSelection="true"
                android:isScrollContainer="true">

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/casual_ride"
                    android:layout_margin="6dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:elevation="12dp"
                    android:id="@+id/moto_casual_ride"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:checkable="true"
                    android:layout_margin="6dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:elevation="12dp"
                    android:text="@string/enduro"
                    android:id="@+id/moto_enduro"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:checkable="true"
                    android:layout_margin="6dp"
                    android:clickable="true"
                    android:elevation="12dp"
                    android:focusable="true"
                    android:text="@string/speed_ride"
                    android:id="@+id/moto_speed"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:checkable="true"
                    android:layout_margin="6dp"
                    android:checked="false"
                    android:clickable="true"
                    android:elevation="12dp"
                    android:focusable="true"
                    android:text="@string/travel"
                    android:id="@+id/moto_travel"/>

            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/send"
                android:id="@+id/send_moto"
                android:layout_margin="12dp"/>


        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</FrameLayout>